--- a/app/src/main/res/layout/fragment_camera_dev.xml
+++ b/app/src/main/res/layout/fragment_camera_dev.xml
@@ -5,6 +5,21 @@
     android:background="#ffffff"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:background="@drawable/back_devlist">
+        <com.smart.cloud.fire.view.BingoDropDowmListView
+            android:id="@+id/area_condition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_margin="30dp"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:background="@drawable/areachooce_shape"/>
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
