--- a/app/src/main/res/drawable/saomiao_diantong_selector.xml
+++ b/app/src/main/res/drawable/saomiao_diantong_selector.xml
@@ -3,5 +3,8 @@
     <!-- 默认时的背景图片-->
     <item android:drawable="@drawable/saomiao_diantong" />
     <item android:state_pressed="true"  android:drawable= "@drawable/saomiao_diantong_p" />
+    <item android:state_checked="true"  android:drawable= "@drawable/saomiao_diantong_p" />
+    <item android:state_enabled="true"  android:drawable= "@drawable/saomiao_diantong_p" />
+    <item android:state_focused="true"  android:drawable= "@drawable/saomiao_diantong_p" />
 
 </selector>
